bug fixes, copy graph attributes in kruskal, measuring time in kruskal