@@ -24,31 +24,44 @@ public class Kruskal {
 
         // adding all the nodes to the spanningTree without the edges
         graph.nodes().forEach(node -> {
-            minimalSpanningTree.addNode(node.getId());
+            Node addedNode = minimalSpanningTree.addNode(node.getId());
+            addedNode.setAttribute("nodeMarker", node.getAttribute("nodeMarker"));
+            addedNode.setAttribute("ui.label", node.getAttribute("ui.label"));
             disjointNodes.add(node);
         });
 
+        float startTime = System.nanoTime();
         // sort the edges by their weight
         List<Edge> edgeList = graph.edges().sorted(Comparator.comparingInt(edge -> (int) edge.getAttribute("weight"))).toList();
 
-
-
         // first edge can be added because we start with an empty graph
-        minimalSpanningTree.addEdge(edgeList.get(0).getId(),edgeList.get(0).getSourceNode().getId(),edgeList.get(0).getTargetNode().getId());
-        disjointNodes.union(edgeList.get(0).getSourceNode(),edgeList.get(0).getTargetNode());
+        Edge workingEdge = edgeList.getFirst();
+        Edge addedEdge = minimalSpanningTree.addEdge(workingEdge.getId(), workingEdge.getSourceNode().getId(), workingEdge.getTargetNode().getId());
+        addedEdge.setAttribute("weight", workingEdge.getAttribute("weight"));
+        addedEdge.setAttribute("edgeMarker", workingEdge.getAttribute("edgeMarker"));
+        addedEdge.setAttribute("ui.label", workingEdge.getAttribute("ui.label"));
+        disjointNodes.union(workingEdge.getSourceNode(), workingEdge.getTargetNode());
 
         // iterate over the edgeList and check each for cycles, then add to spanningTree
         for (int i = 1; i < edgeList.size(); i++) {
-            Edge workingEdge = edgeList.get(i);
+            workingEdge = edgeList.get(i);
             // To check if adding the workingEdge to the graph produces cycles
             // In the beginning no nodes are connected, so each node is found in a one-element-disjointSet
             if (!disjointNodes.inSameSet(workingEdge.getSourceNode(), workingEdge.getTargetNode())) {
                 disjointNodes.union(workingEdge.getSourceNode(), workingEdge.getTargetNode());
-                minimalSpanningTree.addEdge(workingEdge.getId(), workingEdge.getSourceNode().getId(), workingEdge.getTargetNode().getId());
-            }
+                addedEdge = minimalSpanningTree.addEdge(workingEdge.getId(), workingEdge.getSourceNode().getId(), workingEdge.getTargetNode().getId());
 
+                addedEdge.setAttribute("weight", workingEdge.getAttribute("weight"));
+                addedEdge.setAttribute("edgeMarker", workingEdge.getAttribute("edgeMarker"));
+                addedEdge.setAttribute("ui.label", workingEdge.getAttribute("ui.label"));
+                disjointNodes.union(workingEdge.getSourceNode(), workingEdge.getTargetNode());
+            }
         }
+
+        float finishTime = System.nanoTime();
+        float elapsedTime = (finishTime - startTime) / 1000 / 1000 / 1000;
+
+        System.out.printf("elapsed time for kruskal: %f s%n", elapsedTime);
         return minimalSpanningTree;
     }
-
 }
